# docs/swagger.yaml
@@ -16,7 +16,13 @@ definitions:
         type: string
       registerIsEnable:
         type: boolean
+      shareTokenExpiry:
+        type: string
+      shareTokenKey:
+        type: string
       softDeleteRetentionTime:
+        type: string
+      tokenExpiry:
         type: string
       uploadSessionTimeout:
         type: string
